Logging add logging type
